--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-# OAuth認証で使用するクライアントID・シークレット
+# .env.example
+
+# ✅ Google OAuth 認証に必要（Google Cloud Console で取得）
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# アプリケーションのベースURL（例: http://localhost:3000）
-NEXT_PUBLIC_APP_URL=
+# ✅ アプリのベースURL（Vercelデプロイ時は本番URLに）
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# ✅ Prisma用DB接続URL（mainブランチでは未使用・prismaブランチ専用）
+DATABASE_URL=
+
+# ✅ Prismaを有効にするかのフラグ（任意／将来分岐用）
+# ENABLE_PRISMA=true
