--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # ✅ アプリのベースURL（Vercelデプロイ時は本番URLに）
+NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+APP_URL=http://localhost:3000
 
 # ✅ Prisma用DB接続URL（mainブランチでは未使用・prismaブランチ専用）
 DATABASE_URL=
